fix: dotted underlines on safari
Safari can't handle the shorthand property.

--- a/src/css/_02-elements.scss
+++ b/src/css/_02-elements.scss
@@ -122,7 +122,9 @@ h6 {
 .entry .entry-content h4 a:link, .entry .entry-content h4 a, 
 .entry .entry-content h5 a:link, .entry .entry-content h5 a, 
 .entry .entry-content h6 a:link, .entry .entry-content h6 a {
-	text-decoration: underline dotted 10%; // em values don't work as well here https://css-tricks.com/almanac/properties/t/text-decoration-thickness/#aa-percentage-and-the-cascade
+	text-decoration-line: underline;
+	text-decoration-style: dotted;
+	text-decoration-thickness: 10%; // em values don't work as well here https://css-tricks.com/almanac/properties/t/text-decoration-thickness/#aa-percentage-and-the-cascade
 	text-underline-offset: 0.2em; // must be set or will show up different on different browsers
 	text-decoration-skip-ink: none;
 }
@@ -134,7 +136,7 @@ h6 {
 .entry .entry-content h5 a:hover, 
 .entry .entry-content h6 a:hover,
 .entry .entry-content a:hover { 
-	text-decoration: underline solid 10%;
+	text-decoration-style: solid;
 }
 
 // ------------ //
